feat: implement simple index.js and add types for the classes

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 	},
 	"homepage": "https://github.com/almogh52/audify#readme",
 	"dependencies": {
+		"bindings": "^1.5.0",
 		"cmake-js": "^6.0.0",
 		"node-addon-api": "^2.0.0"
 	}
