chore: add more keywords

--- a/package.json
+++ b/package.json
@@ -18,7 +18,23 @@
 		"pcm",
 		"encode",
 		"decode",
-		"opus"
+		"opus",
+		"alsa",
+		"jack",
+		"pulseaudio",
+		"oss",
+		"coreaudio",
+		"asio",
+		"wasapi",
+		"record",
+		"input",
+		"output",
+		"speaker",
+		"sound",
+		"audio",
+		"music",
+		"voip",
+		"headphones"
 	],
 	"author": "Almog Hamdani",
 	"license": "MIT",
