--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 	"scripts": {
 		"docs": "typedoc --out docs . --ignoreCompilerErrors --includeDeclarations --exclude \"**/node_modules/**\" --mode file --theme node_modules/eledoc/bin/default/ --hideGenerator --name \"Audify.js\"",
 		"build": "cmake-js build",
-		"postinstall": "npm run build"
+		"postinstall": "npm run build",
+		"publish": "np"
 	},
 	"repository": {
 		"type": "git",
@@ -51,6 +52,7 @@
 	"devDependencies": {
 		"@types/node": "^12.12.17",
 		"eledoc": "^0.2.1",
+		"np": "^5.2.1",
 		"typedoc": "^0.15.4"
 	}
 }
