--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"docs": "typedoc --out docs . --ignoreCompilerErrors --includeDeclarations --exclude \"**/node_modules/**\" --mode file --theme node_modules/eledoc/bin/default/ --hideGenerator --name \"Audify.js\"",
 		"build": "cmake-js build",
 		"postinstall": "npm run build",
-		"publish": "np"
+		"deploy": "np"
 	},
 	"repository": {
 		"type": "git",
