--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
 	"types": "index.d.ts",
 	"scripts": {
 		"docs": "typedoc --out docs . --ignoreCompilerErrors --includeDeclarations --exclude \"**/node_modules/**\" --mode file --theme node_modules/eledoc/bin/default/ --hideGenerator --name \"Audify.js\"",
-		"build": "cmake-js build",
-		"postinstall": "npm run build",
+		"rebuild": "cmake-js build",
+		"install": "npm run rebuild",
 		"deploy": "np"
 	},
 	"repository": {
