--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "audify",
 	"version": "1.1.0",
-	"description": "Play/Stream PCM audio data & Encode/Decode Opus to PCM audio data",
+	"description": "Play/Stream/Record PCM audio data & Encode/Decode Opus to PCM audio data",
 	"main": "index.js",
 	"types": "index.d.ts",
 	"scripts": {
