build: build only on new tag

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,8 @@ compiler:
   - gcc
   - clang
 
+if: tag IS present
+
 script:
   - cd src
   - npm run build-binaries
-
-deploy:
-  on:
-    tags: on
