--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,9 @@ compiler:
 
 if: tag IS present
 
+before_install:
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; sudo apt-get install libasound2 ; fi
+
 script:
   - cd src
   - npm run build-binaries
