--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,10 @@ if: tag IS present
 
 before_install:
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; sudo apt-get install libasound2 ; fi
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; sudo apt-get install libpulse-dev ; fi
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; sudo apt-get install libjack-dev ; fi
+
+  - if [ "$TRAVIS_OS_NAME" = "osx" ]; brew install jack ; fi
 
 script:
   - cd src
