--- a/.travis.yml
+++ b/.travis.yml
@@ -14,15 +14,9 @@ compiler:
 
 if: tag IS present
 
-before_install:
-  - if [ "$TRAVIS_OS_NAME" = "linux" ]; sudo apt-get install libasound2 ; fi
-  - if [ "$TRAVIS_OS_NAME" = "linux" ]; sudo apt-get install libpulse-dev ; fi
-  - if [ "$TRAVIS_OS_NAME" = "linux" ]; sudo apt-get install libjack-dev ; fi
-
-  - if [ "$TRAVIS_OS_NAME" = "osx" ]; brew install jack ; fi
-
-  - if [ "$TRAVIS_OS_NAME" = "windows" ]; echo upload=%GITHUB_TOKEN% > %HOMEDRIVE%%HOMEPATH%\.prebuildrc ; fi
-  - if [ "$TRAVIS_OS_NAME" = "linux" ] || [ "$TRAVIS_OS_NAME" = "osx" ]; echo upload=$GITHUB_TOKEN > ~/.prebuildrc ; fi
+install:
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get install libasound2 libpulse-dev libjack-dev ; fi
+  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew install jack ; fi
 
 script:
   - cd src
