--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,9 @@ install:
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get install libasound2 libpulse-dev libjack-dev ; fi
   - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew install jack ; fi
 
+before_script:
+  - npm install --only=dev
+
 script:
   - cd src
   - npm run build-binaries
