build: fix linux gcc version

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,8 @@ os:
   - linux
   - osx
 
-compiler:
-  - clang
-
 install:
-  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get install libasound2 libasound2-dev libpulse-dev libjack-dev ; fi
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get install build-essential libasound2 libasound2-dev libpulse-dev libjack-dev ; fi
   - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew install jack ; fi
 
 script:
