ci: change linux's dist to bionic

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,10 @@ os:
   - linux
   - osx
 
+dist: bionic
+
 install:
-  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get install build-essential libasound2 libasound2-dev libpulse-dev libjack-dev ; fi
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get install libasound2 libasound2-dev libpulse-dev libjack-dev ; fi
   - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew install jack ; fi
 
 script:
