ci: add provider to deployment

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,9 @@ script:
   - npm ci
 
 deploy:
-  on:
-    tags: on
+  provider: script
   script:
     - cd src
     - npm run build-binaries
+  on:
+    tags: on
