--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,8 +11,24 @@ IF (WIN32)
     add_definitions(-D_CRT_SECURE_NO_WARNINGS)
 ENDIF()
 
-# Disable RPATH
-SET(CMAKE_EXE_LINKER_FLAGS "-Wl,--enable-new-dtags")
+# Use install RPATH
+IF (UNIX)
+    set(CMAKE_SKIP_BUILD_RPATH  FALSE)
+    set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
+    set(CMAKE_INSTALL_RPATH_USE_LINK_PATH FALSE)
+    set(CMAKE_INSTALL_NAME_DIR "@rpath/")
+ENDIF()
+
+# Set RPATH as origin in linux
+IF (UNIX AND NOT APPLE)
+    set(CMAKE_INSTALL_RPATH "$ORIGIN")
+ENDIF()
+
+# Use @loader_path as RPATH in macos
+IF (APPLE)
+    set(CMAKE_MACOSX_RPATH TRUE)
+    set(CMAKE_INSTALL_RPATH "@loader_path")
+ENDIF()
 
 # Compile Opus
 set(BUILD_SHARED_LIBS ON)
