ci: remove libjack in builds

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,7 @@ os:
 dist: bionic
 
 install:
-  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get install libasound2 libasound2-dev libpulse-dev libjack-dev ; fi
-  - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew install jack ; fi
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get install libasound2 libasound2-dev libpulse-dev ; fi
 
 script:
   - cd src
