--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ dist: bionic
 
 install:
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get install libasound2 libasound2-dev libpulse-dev ; fi
+  - if [ "$TRAVIS_OS_NAME" = "windows" ]; then choco install asio4all ; fi
 
 script:
   - cd src
