--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"types": "index.d.ts",
 	"scripts": {
-		"docs": "node scripts/generate_docs.js",
+		"docs": "git merge-base $(git log --pretty=format:%h -n1 index.d.ts) $(git log --pretty=format:%h -n1 docs) --is-ancestor || (typedoc index.d.ts --hideGenerator --name 'Audify.js' && git add docs && git commit -m 'chore: regenerate docs' docs)",
 		"rebuild": "cmake-js compile",
 		"install": "prebuild-install || npm run rebuild",
 		"deploy": "np",
@@ -60,7 +60,6 @@
 	},
 	"devDependencies": {
 		"@types/node": "^14.14.37",
-		"eledoc": "^0.2.1",
 		"np": "^7.4.0",
 		"prebuild": "^10.0.1",
 		"run-script-os": "^1.1.6",
