chore: fix docs generating without union value

--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
 	"main": "index.js",
 	"types": "index.d.ts",
 	"scripts": {
-		"docs": "git merge-base $(git log --pretty=format:%h -n1 index.d.ts) $(git log --pretty=format:%h -n1 docs) --is-ancestor || (typedoc index.d.ts --hideGenerator --name 'Audify.js' && git add docs && git commit -m 'chore: regenerate docs' docs)",
+		"docs": "typedoc index.d.ts --hideGenerator --name Audify.js",
+		"safe-docs": "git merge-base $(git log --pretty=format:%h -n1 index.d.ts) $(git log --pretty=format:%h -n1 docs) --is-ancestor || (npm run docs && git add docs && git commit -m 'chore: regenerate docs' docs)",
 		"rebuild": "cmake-js compile",
 		"install": "prebuild-install || npm run rebuild",
 		"deploy": "np",
-		"predeploy": "npm run docs",
+		"predeploy": "npm run safe-docs",
 		"build-binaries": "npm run build-binaries-node && npm run build-binaries-electron",
 		"build-binaries-node": "run-script-os",
 		"build-binaries-node:win32": "prebuild --backend cmake-js --include-regex \"^.*\\.(node|dylib|dll|so(\\.[0-9])?)$\" -t 10.17.0 -t 12.11.0 -t 13.0.0 -t 14.0.0 --verbose -u %GITHUB_TOKEN%",
