--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -27,5 +27,8 @@ jobs:
         with:
           node-version: lts/*
 
-      - name: Build
+      - name: Install Dependencies
+        run: npm ci
+
+      - name: Build Audify
         run: npm run build-binaries
