--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -9,13 +9,9 @@ jobs:
     strategy:
       matrix:
         config:
-          # - { name: "Windows", os: windows-latest, cc: "cl", cxx: "cl" }
-          - { name: "Ubuntu", os: ubuntu-latest, cc: "gcc", cxx: "g++" }
-          # - { name: "macOS", os: macos-latest, cc: "clang", cxx: "clang++" }
-
-    # env:
-    #   CC: ${{ matrix.cc }}
-    #   CXX: ${{ matrix.cxx }}
+          - { name: "Windows", os: windows-latest }
+          - { name: "Ubuntu", os: ubuntu-latest }
+          - { name: "macOS", os: macos-latest }
 
     steps:
       - name: Check-Out Code
@@ -31,7 +27,14 @@ jobs:
         with:
           node-version: lts/*
 
-      - name: Install Dependencies
+      - name: Install External Dependencies
+        uses: awalsh128/cache-apt-pkgs-action@latest
+        if: runner.os == 'Linux'
+        with:
+          packages: libasound2 libasound2-dev libpulse-dev
+          version: 1.0
+
+      - name: Install Audify
         run: npm ci
 
       - name: Build Audify
