--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -44,7 +44,7 @@ jobs:
         run: |
           sudo dpkg --remove-architecture amd64
           sudo dpkg --add-architecture ${{ matrix.config.arch }}
-          sed -i 's#http://azure.archive.ubuntu.com/ubuntu/#http://ports.ubuntu.com/ubuntu-ports/#g' /etc/apt/sources.list
+          sudo sed -i 's#http://azure.archive.ubuntu.com/ubuntu#http://ports.ubuntu.com/ubuntu-ports#g' /etc/apt/sources.list
           sudo apt-get update -yq
 
       - name: Install External Dependencies
