[CI]: Build on the correct arch

--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -9,14 +9,15 @@ jobs:
     strategy:
       matrix:
         config:
-          # - { name: "Windows", os: windows-latest }
+          # - { name: "Windows", os: windows-latest, arch: "amd64" }
           - { name: "Ubuntu (x64)", os: ubuntu-latest, arch: "amd64" }
           - { name: "Ubuntu (ARM64)", os: ubuntu-latest, arch: "arm64", cc: "aarch64-linux-gnu-gcc", cxx: "aarch64-linux-gnu-g++" }
-          # - { name: "macOS", os: macos-latest }
+          # - { name: "macOS", os: macos-latest, arch: "amd64" }
 
     env:
       CC: "${{ matrix.config.cc || '' }}"
       CXX: "${{ matrix.config.cxx || '' }}"
+      BUILD_ARCH: "${{ matrix.config.arch != 'amd64' && matrix.config.arch || 'x64' }}"
 
     steps:
       - name: Check-Out Code
@@ -44,7 +45,6 @@ jobs:
         run: |
           sudo dpkg --add-architecture ${{ matrix.config.arch }}
           sudo sed -i 's#http://azure.archive.ubuntu.com/ubuntu#[arch=${{ matrix.config.arch }}] http://ports.ubuntu.com/ubuntu-ports#g' /etc/apt/sources.list
-          sudo apt-get update -yq
 
       - name: Install External Dependencies
         uses: awalsh128/cache-apt-pkgs-action@latest
@@ -53,8 +53,11 @@ jobs:
           packages: libasound2:${{ matrix.config.arch }} libasound2-dev:${{ matrix.config.arch }} libpulse-dev:${{ matrix.config.arch }}
           version: 1.0
 
-      - name: Install Audify
-        run: npm ci
+      - name: Install Audify Dependencies
+        run: npm ci --ignore-scripts
+
+      - name: Build Audify
+        run: npm rebuild -- --arch ${{ env.BUILD_ARCH }}
 
       - name: Build Audify Prebuilt Binaries
-        run: npm run build-binaries
+        run: npm run build-binaries -- -- --arch ${{ env.BUILD_ARCH }}
