--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 		"install": "prebuild-install || npm run rebuild",
 		"deploy": "np --yolo",
 		"predeploy": "npm run safe-docs",
-		"build-binaries": "npm run build-binaries-node && npm run build-binaries-electron",
+		"build-binaries": "npm run build-binaries-node",
+		"postbuild-binaries": "npm run build-binaries-electron",
 		"build-binaries-node": "run-script-os",
 		"build-binaries-node:win32": "prebuild --backend cmake-js --include-regex \"^.*\\.(node|dylib|dll|so(\\.[0-9])?)$\" -t 12.11.0 -t 13.0.0 -t 14.0.0 -t 15.0.0 -t 16.0.0 -t 17.0.0 --verbose -u %GITHUB_TOKEN%",
 		"build-binaries-node:darwin:linux": "prebuild --backend cmake-js --include-regex \"^.*\\.(node|dylib|dll|so(\\.[0-9])?)$\" -t 12.11.0 -t 13.0.0 -t 14.0.0 -t 15.0.0 -t 16.0.0 -t 17.0.0 --verbose -u $GITHUB_TOKEN",
